--- a/HR.ipynb
+++ b/HR.ipynb
@@ -38,7 +38,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.read_csv('/content/Human Resources.csv', index_col = 0);"
+        "df = pd.read_csv('/content/Human Resources.csv', index_col = 0)"
       ],
       "metadata": {
         "id": "VuplCYMO09PK"
